--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=main.html">
+    <title>Перенаправление</title>
+</head>
+<body>
+    <p>Если перенаправление не сработало, <a href="main.html">перейдите по ссылке</a>.</p>
+</body>
+</html>
